--- a/index.html
+++ b/index.html
@@ -7,22 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./assets/CSS/style.css">
 
-    <title> Colorado Geology Trivia </title>
+    <title> Colorado Rivers Trivia </title>
 </head>
 
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                    
-                    <h2> Colorado Geo Trivia</h2>
-                    <p>
+            <div class="col-md-8">
+                <div id="game">
 
-                    </p>
+                    <h2> Colorado River Trivia</h2>
+                    <p>
+                        You have 15 seconds to answer each question.
+                        <br>
+                        Have fun.
+
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <div class="col-md-8">
+            <div class="row">
+                <div id="choices" class="text-center">
+                    <button id="start" class="btn btn-info btn-lg"> Begin the Journey</button>
+                    <div id="options">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     </div>
