--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <!--JQuery-->
      <script src="https://code.jquery.com/jquery.js"> </script>
-     
+
     <!--BootStrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="jumbotron text-center">
             <div class="headerWrap">
-                <h1>Colorado RIver Trivia</h1>
+                <h1>Colorado River Trivia</h1>
                 <p> You have 10 seconds to answer each question</p>
             </div>
         </div>
