--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="start" class="btn text-center btn-large">Start</button>
         </div>
 
-        <div id="resetButtonWrap" class="text-center"></div>
+        <div id="resetButton" class="text-center"></div>
     </div>
 
         <footer class="footer">
