--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
 
 
-    <script type="text/javascript" src="./assets/javaScript/app.js"></script>
+    <script type="text/javascript" src="./assets/JavaScript/app.js"></script>
 </body>
 
 </html>
