testing out styles

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron text-center">
-            <div class="headerWrap">
-                <h1>Colorado River Trivia</h1>
-                <p> You have 10 seconds to answer each question</p>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Colorado River Trivia</h1>
+              <p class="lead">You have 10 seconds to answer each question</p>
             </div>
-        </div>
+          </div>
         
         <div id="contentWrap" class="text-center">
             <button id="start" class="btn text-center btn-large">Start</button>
